<package format="3">
    <name>fast_mapping</name>
    <version>2.2.0</version>
    <description>

        A really FastMapping method from RGB-D sequences.

    </description>
    <maintainer email="eci.maintainer@intel.com">ECI Maintainer</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake_core</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>rclcpp_action</build_depend>
    <build_depend>rclcpp_lifecycle</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>message_filters</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>rclcpp_action</exec_depend>
    <exec_depend>rclcpp_lifecycle</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_eigen</exec_depend>
    <exec_depend>message_filters</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
